--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@astrojs/rss": "^4.0.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "astro": "^4.0.7",
+    "astro": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "description": "```sh\r npm create astro@latest -- --template minimal\r ```",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
