--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typed.js": "^2.1.0"
   },
   "description": "```sh\r npm create astro@latest -- --template minimal\r ```",
   "main": "index.js",
