--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "typed.js": "^2.1.0"
   },
   "description": "```sh\r npm create astro@latest -- --template minimal\r ```",
